Bug fixes / improvements (alignment with Gold).

--- a/assets/App-1.1.0.css
+++ b/assets/App-1.1.0.css
@@ -7690,7 +7690,7 @@ h1 {
 }
 .modal-body {
   font-size: 1.1em !important;
-  word-break: break-all;
+  word-break: break-word;
   word-wrap: break-word;
 }
 .half-width {
